--- a/src/app/shared/component/todo1-list/todo1-list.component.html
+++ b/src/app/shared/component/todo1-list/todo1-list.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between" *ngFor="let todo1 of todo1Arr">
+    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo1 of todo1Arr">
         <strong>{{todo1.todoItem}}</strong>
         <div>
             <button class="btn-lg" mat-icon-button color="primary" aria-label="Example icon button with a delete icon">
