--- a/src/app/shared/component/todo4-form/todo4-form.component.html
+++ b/src/app/shared/component/todo4-form/todo4-form.component.html
@@ -1,1 +1,14 @@
-<p>todo4-form works!</p>
+<div class="card">
+    <div class="card-body">
+        <form #addDir="ngForm" (ngSubmit)="onAddDir()">
+            <div class="form-group">
+                <input
+                ngModel
+                name="todoItem"
+                required
+                placeholder="Add Directives..." type="text" class="form-control">
+            </div>
+            <button type="submit" class="btn-block" mat-raised-button color="primary">Add Directives</button>
+        </form>
+    </div>
+</div>
