--- a/src/app/shared/component/todo-list/todo-list.component.html
+++ b/src/app/shared/component/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between" *ngFor="let todo of todoArr">
+    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo of todoArr">
         <strong>{{todo.todoItem}}</strong>
         <div>
             <button class="mr-2" mat-raised-button color="primary">Edit</button>
