--- a/src/app/shared/component/todo2-list/todo2-list.component.html
+++ b/src/app/shared/component/todo2-list/todo2-list.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between" *ngFor="let todo2 of todo2Arr">
+    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo2 of todo2Arr">
         <strong>{{todo2.todoItem}}</strong>
         <div>
             <button class="mr-2" mat-raised-button color="primary">Edit</button>
