--- a/src/app/shared/component/todo3-list/todo3-list.component.html
+++ b/src/app/shared/component/todo3-list/todo3-list.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between" *ngFor="let todo3 of todo3Arr">
+    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo3 of todo3Arr">
        <strong> {{todo3.todoItem}}</strong>
        <div>
         <button class="mr-2" mat-raised-button color="primary">Edit</button>
