--- a/src/app/shared/component/todo4-list/todo4-list.component.html
+++ b/src/app/shared/component/todo4-list/todo4-list.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between" *ngFor="let todo4 of todo4Arr">
+    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo4 of todo4Arr">
         <strong>{{todo4.todoItem}}</strong>
         <div>
             <button mat-raised-button class="mr-2" color="primary">Edit</button>
