--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-6">
+      <app-mobile-form></app-mobile-form>
+    </div>
+    <div class="col-md-6">
+      <app-mobile-list></app-mobile-list>
+    </div>
+  </div>
+</div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6">
       <app-todo-form></app-todo-form>
     </div>
     <div class="col-md-6">
