--- a/src/app/shared/component/todo-form/todo-form.component.html
+++ b/src/app/shared/component/todo-form/todo-form.component.html
@@ -1,5 +1,6 @@
 <div class="card">
     <div class="card-body">
+        <h2>{{isEditMode ? 'Update Todo' : 'Add todo'}}</h2>
         <form #todoItem="ngForm" (ngSubmit)="onAddTodo()">
             <div class="form-group">
                 <input
@@ -8,7 +9,13 @@
             name="todoItem"
             placeholder="Add todoItems...." class="form-control">
             </div>
-            <button type="submit" class="btn-block" mat-raised-button color="primary">Add Todo</button>
+            <button
+            *ngIf="!isEditMode"
+            type="submit" class="btn-block" mat-raised-button color="primary">Add Todo</button>
+            <button
+            (click)="onUpdate()"
+            *ngIf="isEditMode"
+            type="button" class="btn-block" mat-raised-button color="primary">Update Todo</button>
         </form>
     </div>
 </div>
