--- a/src/app/shared/component/todo-list/todo-list.component.html
+++ b/src/app/shared/component/todo-list/todo-list.component.html
@@ -1,9 +1,16 @@
-<ul class="list-group">
+<ul class="list-group" *ngIf="todoArr.length>0; else noData">
     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo of todoArr">
         <strong>{{todo.todoItem}}</strong>
         <div>
-            <button class="mr-2" mat-raised-button color="primary">Edit</button>
-            <button mat-raised-button color="warn">Remove</button>
+            <button 
+            (click)="onEdit(todo)"
+            class="mr-2" mat-raised-button color="primary">Edit</button>
+            <button
+            (click)="onRemove(todo.todoId)"
+            mat-raised-button color="warn">Remove</button>
         </div>
     </li>
 </ul>
+<ng-template #noData>
+    <p class="alert alert-warning">There is no todoItem...</p>
+</ng-template>
