--- a/src/app/shared/component/todo1-list/todo1-list.component.html
+++ b/src/app/shared/component/todo1-list/todo1-list.component.html
@@ -1,13 +1,20 @@
-<ul class="list-group">
+<ul class="list-group" *ngIf="todo1Arr.length>0; else noData">
     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo1 of todo1Arr">
         <strong>{{todo1.todoItem}}</strong>
         <div>
-            <button class="btn-lg" mat-icon-button color="primary" aria-label="Example icon button with a delete icon">
+            <button
+            (click)="onEdit(todo1)"
+            class="btn-lg" mat-icon-button color="primary" aria-label="Example icon button with a delete icon">
                 <mat-icon>edit</mat-icon>
             </button>
-            <button class="btn-lg" mat-icon-button color="warn" aria-label="Example icon button with a delete icon">
+            <button
+            (click)="onRemove(todo1.todoId)"
+            class="btn-lg" mat-icon-button color="warn" aria-label="Example icon button with a delete icon">
                 <mat-icon>delete</mat-icon>
             </button>
         </div>
     </li>
 </ul>
+<ng-template #noData>
+    <p class="alert alert-warning">There is no todoItem...</p>
+</ng-template>
