--- a/src/app/shared/component/todo2-form/todo2-form.component.html
+++ b/src/app/shared/component/todo2-form/todo2-form.component.html
@@ -1,5 +1,6 @@
 <div class="card">
     <div class="card-body">
+        <h2>{{isEditMode ? 'Update Language' : 'Add Language'}}</h2>
         <form #addLang="ngForm" (ngSubmit)="onAddLang()">
             <div class="form-group">
                 <input
@@ -8,7 +9,10 @@
                 required
                 type="text" class="form-control" placeholder="Add Language...">
             </div>
-            <button class="btn-block" mat-raised-button color="primary">Add Language</button>
+            <button *ngIf="!isEditMode" type="submit" class="btn-block" mat-raised-button color="primary">Add Language</button>
+            <button
+            (click)="onUpdate()"
+            *ngIf="isEditMode" type="button" class="btn-block" mat-raised-button color="primary">Update Language</button>
         </form>
     </div>
 </div>
