--- a/src/app/shared/component/todo2-list/todo2-list.component.html
+++ b/src/app/shared/component/todo2-list/todo2-list.component.html
@@ -1,9 +1,18 @@
-<ul class="list-group">
+<ul class="list-group" *ngIf="todo2Arr.length>0;else noData">
     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo2 of todo2Arr">
         <strong>{{todo2.todoItem}}</strong>
         <div>
-            <button class="mr-2" mat-raised-button color="primary">Edit</button>
-            <button mat-raised-button color="warn">Remove</button>
+            <button 
+            (click)="onEdit(todo2)"
+            class="mr-2" mat-raised-button color="primary">Edit</button>
+            <button
+            (click)="onRemove(todo2)"
+            mat-raised-button color="warn">Remove</button>
         </div>
     </li>
 </ul>
+<ng-template #noData>
+    <p class="alert alert-warning">
+        There is no Language...
+    </p>
+</ng-template>
