--- a/src/app/shared/component/todo3-list/todo3-list.component.html
+++ b/src/app/shared/component/todo3-list/todo3-list.component.html
@@ -1,9 +1,16 @@
-<ul class="list-group">
+<ul class="list-group" *ngIf="todo3Arr.length>0; else noData">
     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo3 of todo3Arr">
        <strong> {{todo3.todoItem}}</strong>
        <div>
-        <button class="mr-2" mat-raised-button color="primary">Edit</button>
-        <button mat-raised-button color="warn">Remove</button>
+        <button
+        (click)="onEdit(todo3)"
+        class="mr-2" mat-raised-button color="primary">Edit</button>
+        <button
+        (click)="onRemove(todo3.todoId)"
+        mat-raised-button color="warn">Remove</button>
        </div>
     </li>
 </ul>
+<ng-template #noData>
+    <p class="alert alert-warning">There is no city...</p>
+</ng-template>
