--- a/src/app/shared/component/todo4-list/todo4-list.component.html
+++ b/src/app/shared/component/todo4-list/todo4-list.component.html
@@ -1,9 +1,16 @@
-<ul class="list-group">
+<ul class="list-group" *ngIf="todo4Arr.length>0; else noData">
     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let todo4 of todo4Arr">
         <strong>{{todo4.todoItem}}</strong>
         <div>
-            <button mat-raised-button class="mr-2" color="primary">Edit</button>
-            <button mat-raised-button color="warn">Remove</button>
+            <button
+            (click)="onEdit(todo4)"
+            mat-raised-button class="mr-2" color="primary">Edit</button>
+            <button
+            (click)="onRemove(todo4.todoId)"
+            mat-raised-button color="warn">Remove</button>
         </div>
     </li>
 </ul>
+<ng-template #noData>
+    <p class="alert alert-warning">There is no directives...</p>
+</ng-template>
